--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@auth0/angular-jwt": "^5.0.1",
     "@fortawesome/fontawesome-free": "^5.15.1",
     "@popperjs/core": "^2.5.4",
+    "angular-calendar": "^0.28.22",
     "bootstrap": "^4.5.3",
+    "date-fns": "^2.16.1",
     "jquery": "^3.5.1",
     "ng-pick-datetime": "^7.0.0",
     "ngx-paypal": "^6.2.0",
