--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@popperjs/core": "^2.5.4",
     "angular-calendar": "^0.28.22",
     "bootstrap": "^4.5.3",
+    "chart.js": "^2.9.4",
     "date-fns": "^2.16.1",
     "jquery": "^3.5.1",
     "ng-pick-datetime": "^7.0.0",
