--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~11.0.0",
     "@auth0/angular-jwt": "^5.0.1",
     "@fortawesome/fontawesome-free": "^5.15.1",
+    "@ng-bootstrap/ng-bootstrap": "^8.0.0",
     "@popperjs/core": "^2.5.4",
     "angular-calendar": "^0.28.22",
     "bootstrap": "^4.5.3",
