--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@fortawesome/fontawesome-free": "^5.15.1",
     "@ng-bootstrap/ng-bootstrap": "^8.0.0",
     "@popperjs/core": "^2.5.4",
+    "@types/jquery": "^3.5.5",
     "angular-calendar": "^0.28.22",
     "bootstrap": "^4.5.3",
     "chart.js": "^2.9.4",
