--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ng build --prod"
+  },
+  "engines": {
+    "node": "10.14.2",
+      "npm": "6.4.1"
   },
   "private": true,
   "dependencies": {
@@ -32,6 +37,7 @@
     "bootstrap": "^4.5.3",
     "chart.js": "^2.9.4",
     "date-fns": "^2.16.1",
+    "express": "^4.17.1",
     "jquery": "^3.5.1",
     "ngx-paypal": "^6.2.0",
     "rxjs": "~6.6.0",
