--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "ng build --prod"
+    "heroku-postbuild": "ng build --prod"
   },
   "engines": {
-    "node": "10.14.2",
-      "npm": "6.4.1"
+    "node": "12.4.0",
+    "npm": "6.9.0"
   },
   "private": true,
   "dependencies": {
@@ -40,12 +40,15 @@
     "express": "^4.17.1",
     "jquery": "^3.5.1",
     "ngx-paypal": "^6.2.0",
+    "path": "^0.12.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "typescript": "^4.0.5",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
+    "@angular/cli": "^11.0.4",
+    "@angular/compiler-cli": "^11.0.4",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
